[workspace]
resolver = "3"
members = ["./crates/*"]
default-members = ["./crates/*"]

[workspace.dependencies]
markdown = "1"

time = {version = "0.3", features = ["serde"]}

thiserror = "2"
serde = {version = "1", features = ["derive"]}
itertools = "0.14"

quote = "1"
syn = "2"
proc-macro2 = {version = "1", features = ["span-locations"]}


