[package]
name = "homepage-live"
version = "0.1.0"
edition = "2024"

[lib]
path = "./lib.rs"

[features]
live = ["inventory", "notify", "dlopen"]

[dependencies]
homepage-macros = {path = "../homepage-macros"}

askama = {workspace = true}
inventory = {workspace = true, optional = true}
notify = {version = "8", optional = true}
tracing = {workspace = true}
dlopen = {version = "0.1", optional = true}
