[package]
name = "homepage-route-gen"
version = "0.1.0"
edition = "2024"

[lib]
path = "./lib.rs"
proc-macro = true

[dependencies]
homepage-markdown = {path = "../homepage-markdown"}
homepage-traits = {path = "../homepage-traits"}

quote = {workspace = true}
proc-macro2 = {workspace = true}
syn = {workspace = true, features = ["parsing"]}
